--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="header-third"><img src="images/sandals-logo.png" loading="lazy" alt=""></div>
       <div class="header-third align-right">
         <div class="button">
-          <a href="#filters" class="button-wrapper">Explore Your Options</a>
+          <a href="https://www.sandals.co.uk/" class="button-wrapper">Explore Your Options</a>
         </div>
       </div>
     </div>
