--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body>
   <section class="hero">
     <div class="intro-slideshow">
-      <img src="/images/splash/2.jpg">
-      <img src="/images/splash/3.jpg">
-      <img src="/images/hero.jpg">
+      <img src="images/splash/2.jpg">
+      <img src="images/splash/3.jpg">
+      <img src="images/hero.jpg">
     </div>
     <div class="header">
       <div class="header-third"></div>
@@ -105,27 +105,27 @@
           <img src="images/resort-testing/Rectangle 42.jpg">
         </div>
         <div class="resort-images map">
-          <img src="/images/sandals_placeholder.jpg">
+          <img src="images/sandals_placeholder.jpg">
           <img src="images/resort-testing/sandals.jpg">
         </div>
         <div class="resort-images beaches">
-          <img src="/images/sandals_placeholder.jpg">
+          <img src="images/sandals_placeholder.jpg">
           <img src="images/resort-testing/sandals2.jpg">
         </div>
         <div class="resort-images pools">
-          <img src="/images/sandals_placeholder.jpg">
+          <img src="images/sandals_placeholder.jpg">
           <img src="images/resort-testing/sandlas3.jpg">
         </div>
         <div class="resort-images dining">
-          <img src="/images/sandals_placeholder.jpg">
+          <img src="images/sandals_placeholder.jpg">
           <img src="images/resort-testing/sandlas4.jpg">
         </div>
         <div class="resort-images watersports">
-          <img src="/images/sandals_placeholder.jpg">
+          <img src="images/sandals_placeholder.jpg">
           <img src="images/resort-testing/Rectangle 41.jpg">
         </div>
         <div class="resort-images island">
-          <img src="/images/sandals_placeholder.jpg">
+          <img src="images/sandals_placeholder.jpg">
           <img src="images/resort-testing/Rectangle 42.jpg">
         </div>
       </div>
@@ -197,12 +197,12 @@
           <img src="images/resort-testing/Rectangle 41.jpg">
           <img src="images/resort-testing/Rectangle 42.jpg">
         </div>
-        <div class="resort-images map"><img src="/images/sandals_placeholder.jpg"></div>
-        <div class="resort-images beaches"><img src="/images/sandals_placeholder.jpg"></div>
-        <div class="resort-images pools"><img src="/images/sandals_placeholder.jpg"></div>
-        <div class="resort-images dining"><img src="/images/sandals_placeholder.jpg"></div>
-        <div class="resort-images watersports"><img src="/images/sandals_placeholder.jpg"></div>
-        <div class="resort-images island"><img src="/images/sandals_placeholder.jpg"></div>
+        <div class="resort-images map"><img src="images/sandals_placeholder.jpg"></div>
+        <div class="resort-images beaches"><img src="images/sandals_placeholder.jpg"></div>
+        <div class="resort-images pools"><img src="images/sandals_placeholder.jpg"></div>
+        <div class="resort-images dining"><img src="images/sandals_placeholder.jpg"></div>
+        <div class="resort-images watersports"><img src="images/sandals_placeholder.jpg"></div>
+        <div class="resort-images island"><img src="images/sandals_placeholder.jpg"></div>
       </div>
     </div>
   </div>
@@ -272,12 +272,12 @@
           <img src="images/resort-testing/Rectangle 41.jpg">
           <img src="images/resort-testing/Rectangle 42.jpg">
         </div>
-        <div class="resort-images map"><img src="/images/sandals_placeholder.jpg"></div>
-        <div class="resort-images beaches"><img src="/images/sandals_placeholder.jpg"></div>
-        <div class="resort-images pools"><img src="/images/sandals_placeholder.jpg"></div>
-        <div class="resort-images dining"><img src="/images/sandals_placeholder.jpg"></div>
-        <div class="resort-images watersports"><img src="/images/sandals_placeholder.jpg"></div>
-        <div class="resort-images island"><img src="/images/sandals_placeholder.jpg"></div>
+        <div class="resort-images map"><img src="images/sandals_placeholder.jpg"></div>
+        <div class="resort-images beaches"><img src="images/sandals_placeholder.jpg"></div>
+        <div class="resort-images pools"><img src="images/sandals_placeholder.jpg"></div>
+        <div class="resort-images dining"><img src="images/sandals_placeholder.jpg"></div>
+        <div class="resort-images watersports"><img src="images/sandals_placeholder.jpg"></div>
+        <div class="resort-images island"><img src="images/sandals_placeholder.jpg"></div>
       </div>
     </div>
   </div>
@@ -444,15 +444,15 @@
       </div>
       
       <div class="carousel-island" data-flickity='{ "groupCells": true }'>
-        <div class="carousel-cell"><div class="island-name">Jamaica</div><img src="/images/splash/jamaica.webp"></div>
-        <div class="carousel-cell"><div class="island-name">Antigua</div><img src="/images/splash/antigua.webp"></div>
-        <div class="carousel-cell"><div class="island-name">Saint Lucia</div><img src="/images/splash/saintlucia.webp"></div>
-        <div class="carousel-cell"><div class="island-name">Bahamas</div><img src="/images/splash/bahamas.webp"></div>
-        <div class="carousel-cell"><div class="island-name">Grenada</div><img src="/images/splash/grenada.jpeg"></div>
-        <div class="carousel-cell"><div class="island-name">Barbados</div><img src="/images/splash/barbados.jpg"></div>
-        <div class="carousel-cell"><div class="island-name">Curaçao</div><img src="/images/splash/Curaçao.webp"></div>
-        <div class="carousel-cell"><div class="island-name">Turks & Caicos</div><img src="/images/splash/Turks.webp"></div>
-        <div class="carousel-cell"><div class="island-name">Saint Vincent</div><img src="/images/splash/Vincent.jpg"></div>
+        <div class="carousel-cell"><div class="island-name">Jamaica</div><img src="images/splash/jamaica.webp"></div>
+        <div class="carousel-cell"><div class="island-name">Antigua</div><img src="images/splash/antigua.webp"></div>
+        <div class="carousel-cell"><div class="island-name">Saint Lucia</div><img src="images/splash/saintlucia.webp"></div>
+        <div class="carousel-cell"><div class="island-name">Bahamas</div><img src="images/splash/bahamas.webp"></div>
+        <div class="carousel-cell"><div class="island-name">Grenada</div><img src="images/splash/grenada.jpeg"></div>
+        <div class="carousel-cell"><div class="island-name">Barbados</div><img src="images/splash/barbados.jpg"></div>
+        <div class="carousel-cell"><div class="island-name">Curaçao</div><img src="images/splash/Curaçao.webp"></div>
+        <div class="carousel-cell"><div class="island-name">Turks & Caicos</div><img src="images/splash/Turks.webp"></div>
+        <div class="carousel-cell"><div class="island-name">Saint Vincent</div><img src="images/splash/Vincent.jpg"></div>
       </div>
 
     </div>
