--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
     "IdealFor2": "Beach Lovers",
     "IdealFor3": "Food and Drink Lovers",
     "Tags": "adults-only, more-social, more-intimate, long-stretch, scuba, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
-    "Images": "/images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
-    "Beaches": "/images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
+    "Images": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
+    "Beaches": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Pool": "images/Sandals Montego Bay/3 - Pools/Sandals-SMB-Swim-Up.jpg",
     "Map": "",
     "Dining": "images/Sandals Montego Bay/5 - Dining & Bars/Sandals-SMB-Cricketers2.jpg",
