--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
           <img src="{{Images}}">
         </div>
         <div class="resort-images beaches">
-          <img src="{{Beaches}}">
+          {{#if Beaches}}<img src="{{Beaches}}">{{/if}}
         </div>
         <div class="resort-images pools">
-          <img src="{{Pool}}">
+          {{#if Pool}}<img src="{{Pool}}">{{/if}}
         </div>
         <div class="resort-images dining">
-          <img src="{{Dining}}">
+          {{#if Dining}}<img src="{{Dining}}">{{/if}}
         </div>
         <div class="resort-images watersports">
-          <img src="{{watersports}}">
+          {{#if watersports}}<img src="{{watersports}}">{{/if}}
         </div>
         <div class="resort-images island">
-          <img src="{{IslandTours}}">
+          {{#if IslandTours}}<img src="{{IslandTours}}">{{/if}}
         </div>
       </div>
     </div>
