--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="filters-title">
         <div class="filters-title-wrapper">
           <h1 class="heading-2">Build Your IDEAL VACATION</h1>
-          <h4 class="heading-3">select up to 2 options per category</h4>
+          <h4 class="heading-3">select up to 3 options</h4>
           <div class="tag-breadcrumb">
 
           </div>
@@ -280,7 +280,7 @@
           <h4 class="heading-3 tag-text">Rum Club</h4>
         </div>
       </div>
-      <div class="tag-wrapper">
+      <!-- <div class="tag-wrapper">
         <h4 class="heading-3 tag-title">TIME FROM AIRPORT</h4>
         <div class="tag">
           <h4 class="heading-3 tag-text">Less than 45 Minutes</h4>
@@ -288,7 +288,7 @@
         <div class="tag">
           <h4 class="heading-3 tag-text">More than 1 Hour</h4>
         </div>
-      </div>
+      </div> -->
   </section>
       </body>
       </html>
@@ -339,7 +339,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Adventure Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, long-stretch-of-beach, scuba, glass-bottom-boat, tennis, sky-pool-suite, swim-up-suite, motorized-watersports, teppanyaki, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-tranquil, more-intimate, long-stretch, scuba, glass-bottom-boat, tennis, sky-pool-suite, swim-up-suite, motorized-watersports, teppanyaki, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Negril/1 - Carousel_ResortHero_Slider/Sandals-Negril-Aerial.jpg",
     "Beaches": "images/Sandals Negril/4 - Beaches/Sandals-Negril-Aerial.jpg",
     "Pool": "images/Sandals Negril/3 - Pools/Sandals-Negril-Pool.jpg",
@@ -387,7 +387,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Nature Lovers",
     "IdealFor3": "Food and Wine Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba, long-stretch-of-beach, tennis, pickleball, motorized-watersports, over-the-water-villa, rondoval-suite, swim-up-suite, jerk-shack, sushi, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-social, more-expansive, scuba, long-stretch, tennis, pickleball, motorized-watersports, over-the-water-villa, rondoval-suite, swim-up-suite, jerk-shack, sushi, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Royal Plantation/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalplantation-15.jpg",
     "Beaches": "images/Sandals Royal Plantation/4 - Beaches/SRP_Beach_Detail.jpg",
     "Pool": "images/Sandals Royal Plantation/3 - Pools/croissantsandcaviar_sandalsroyalplantation-4.jpg",
@@ -413,29 +413,13 @@
     "IslandTours": "images/Sandals Dunn's River/7 - Tours/Dunns_River_Falls.jpg"
   },
   {
-    "ResortTitle": "Sandals Emerald Bay (Bahamas)",
-    "Island": "Bahamas",
-    "ResortDescription": "The ultimate golf, tennis & spa resort\nSitting on one mile of one of Exuma’s best powdery beaches \nHalf acre zero entry pool \nPADI-Certified SCUBA diving and equipment\nTransfers and geens fees to Greg Norman designed golf course   \n6 tennis courts, including a sunken stadium\nPickleball court\n11 restaurants and 6 bars\nExuma Bays swimming with pigs adventure \nFitness Center and Red Lane Spa",
-    "IdealFor": "Golf Lovers",
-    "IdealFor2": "Tennis Lovers",
-    "IdealFor3": "Beach Lovers",
-    "Tags": "adults-only, more-social, more-intimate, scuba, long-stretch-of-beach, tennis, pickleball, golf-off-property, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
-    "Images": "images/Sandals Emerald Bay/1 - Carousel_ResortHero_Slider/Drone_MainPool_0030.jpg",
-    "Beaches": "images/Sandals Emerald Bay/4 - Beaches/EB_Drone_Beach_shore_007 RGB.jpg",
-    "Pool": "images/Sandals Emerald Bay/3 - Pools/Drone_MainPool_0030.1.jpg",
-    "Map": "",
-    "Dining": "",
-    "watersports": "images/Sandals Emerald Bay/6 - Watersports/CPL Boat_2_0247.jpg",
-    "IslandTours": "images/Sandals Emerald Bay/7 - Tours/Pig_Island_0298 (1).jpg"
-  },
-  {
     "ResortTitle": "Sandals Royal Bahamian",
     "Island": "Bahamas",
     "ResortDescription": "The Bahamas’ most elegant resort \nFeaturing its own private offshore island\nEasy access to the Blue Lagoon dolphin swim\nRolls Royce private transfers for top-tier suites \nOver 10,000 sq. ft of freshwater pools \nPADI-Certified SCUBA diving and equipment\n10 restaurants and 8 bars\nEasy access to Nassau for shopping, tours, and casinos \nClose proximity to Miami \nFitness Center and Red Lane Spa",
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Island Lovers",
     "IdealFor3": "Pool Lovers",
-    "Tags": "adults-only, more-social, more-intimate, scuba, long-stretch-of-beach, tennis, pickleball, golf-off-property, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-social, more-intimate, scuba, long-stretch, tennis, pickleball, golf-off-property, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Bahamian/1 - Carousel_ResortHero_Slider/SRB - Aerial Beach 1.jpg",
     "Beaches": "images/Sandals Royal Bahamian/4 - Beaches/SRB - Aerial Barefoot Cay 2.jpg",
     "Pool": "images/Sandals Royal Bahamian/3 - Pools/SRB - Aerial East Bay Pool 2.jpg",
@@ -611,7 +595,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
     "IdealFor3": "Beach Lover",
-    "Tags": "families-with-kids, more-social, more-expansive, long-stretch-of-beach, scuba, tennis, distance-to-airport-more-than-an-hour \n",
+    "Tags": "families-with-kids, more-social, more-expansive, long-stretch, scuba, tennis, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Negril/1 - Carousel_ResortHero_Slider/DJI_0935 copy.jpg",
     "Beaches": "images/Beaches Negril/4 - Beaches/Beaches Negril_Beach_4.jpg",
     "Pool": "images/Beaches Negril/3 - Pools/DJI_0820.jpg",
