--- a/index.html
+++ b/index.html
@@ -229,10 +229,7 @@
       <div class="tag-wrapper">
         <h4 class="heading-3 tag-title">WATERSPORTS</h4>
         <div class="tag">
-          <h4 class="heading-3 tag-text">Scuba Diving from Resort</h4>
-        </div>
-        <div class="tag">
-          <h4 class="heading-3 tag-text">Scuba Diving off Resort</h4>
+          <h4 class="heading-3 tag-text">Scuba</h4>
         </div>
         <div class="tag">
           <h4 class="heading-3 tag-text">Motorized Watersports</h4>
