--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <h4 class="heading-3 tag-text">Rondovals</h4>
         </div>
         <div class="tag">
-          <h4 class="heading-3 tag-text">SkyPool Suites</h4>
+          <h4 class="heading-3 tag-text">SkyPool Suite</h4>
         </div>
         <div class="tag">
           <h4 class="heading-3 tag-text">Swim-Up Suites</h4>
