--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
 <body>
   <section class="hero">
     <div class="intro-slideshow">
-      <img src="images/splash/2.jpg">
-      <img src="images/splash/3.jpg">
-      <img src="images/hero.jpg">
+      <img src="Carousel/Beaches-Turks-and-Caicos_Carousel_ResortHero_Slider_1.jpg">
+      <img src="Carousel/Sandals-Barbados_Carousel_ResortHero_Slider_1.jpg">
+      <img src="Carousel/Sandals-Dunns-River_Carousel_ResortHero_Slider_1.jpg">
+      <img src="Carousel/Sandals-Emerald-Bay_Carousel_ResortHero_Slider_1.jpg">
+      <img src="Carousel/Sandals-Montego-Bay_Carousel_ResortHero_Slider_1.jpg">
+      <img src="Carousel/Sandals-Saint-Vincent_Carousel_ResortHero_Slider_1.jpg">
     </div>
     <div class="header">
       <div class="header-third"></div>
