extra resize call back

--- a/index.html
+++ b/index.html
@@ -107,34 +107,34 @@
           
         </div>
         <div class="resort-images beaches">
-          <div class="resort-image">{{#if Beaches}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if Beaches}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_2.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if Beaches}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_3.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if Beaches}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_4.jpg">{{/if}}</div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_2.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_3.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_4.jpg"></div>
         </div>
         <div class="resort-images pools">
-          <div class="resort-image">{{#if Pool}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if Pool}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_2.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if Pool}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_3.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if Pool}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_4.jpg">{{/if}}</div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_2.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_3.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_4.jpg"></div>
         </div>
         <div class="resort-images dining">
-          <div class="resort-image">{{#if Dining}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if Dining}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_2.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if Dining}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_3.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if Dining}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_4.jpg">{{/if}}</div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_2.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_3.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_4.jpg"></div>
         </div>
         <div class="resort-images watersports">
-          <div class="resort-image">{{#if watersports}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if watersports}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_2.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if watersports}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_3.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if watersports}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_4.jpg">{{/if}}</div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_2.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_3.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_4.jpg"></div>
         </div>
         <div class="resort-images island">
-          <div class="resort-image">{{#if IslandTours}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if IslandTours}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_2.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if IslandTours}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_3.jpg">{{/if}}</div>
-          <div class="resort-image">{{#if IslandTours}}<img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_4.jpg">{{/if}}</div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_2.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_3.jpg"></div>
+          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_4.jpg"></div>
         </div>
       </div>
     </div>
