--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
   },
   {
     "ResortTitle": "Sandals Halcyon Beach",
-    "Island": "St. Lucia",
+    "Island": "Saint Lucia",
     "ResortDescription": "A “Garden of Eden” with tropical gardens along pristine white-sand beaches\nThe Caribbean’s longest swim-up pool\nStay at 1, play at 3 – full and easy access to 2 other Sandals resorts \n6 restaurants and 7 bars\n9 hole golf course located nearby at Sandals Regency La Toc \nPADI-Certified SCUBA diving and equipment\n3 pools, 3 whirlpools, 1 SCUBA pool\nWaterskiing, wakeboarding\nHobie Cats, paddleboards, kayaks\nFitness Center and Red Lane Spa\n",
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Golf Lovers",
@@ -520,7 +520,7 @@
   },
   {
     "ResortTitle": "Sandals Regency La Toc",
-    "Island": "St. Lucia",
+    "Island": "Saint Lucia",
     "ResortDescription": "Saint Lucia’s most glamourous resort\nHalf-mile, crescent-shaped beach\nSet against exotic coral bluffs, lush hillsides and rolling fairways\nStay at 1, play at 3 – full and easy access to 2 other Sandals resorts\nSunset Bluff Millionaire Butler Villas with private pool sanctuary \nSandals Regency La Toc Golf course with 9 holes located directly on the resort \n9 restaurants and 8 bars\n3 pools and 4 whirlpools\nPADI-Certified SCUBA diving and equipment\nFitness Center and Red Lane Spa ",
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Nature Lovers",
@@ -536,11 +536,11 @@
   },
   {
     "ResortTitle": "Sandals Grande St. Lucian",
-    "Island": "St. Lucia",
+    "Island": "Saint Lucia",
     "ResortDescription": "Located on Rodney Bay peninsula, known for the calmest waters in Saint Lucia\nMile-long beach with views of volcanic mountains\nLagoon swim-up rooms with direct pool access from the patio \n Stay at 1, play at 3 – full and easy access to 2 other Sandals resorts\n PADI® Certified SCUBA diving and equipment \nGreg Norman designed golf course \n12 restaurants and 6 bars\n8 Over the Water Bungalows\n5 pools, 3 whirlpools, 1 SCUBA pool\nFitness Center and Red Lane Spa\n",
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Golf Lovers",
-    "IdealFor3": "Food and Drink Lovers.",
+    "IdealFor3": "Food and Drink Lovers",
     "Tags": "Adults Only \nMore Tranquil\nMore Expansive (Number of Suites: 311 Rooms)\nScuba – Need info if “from resort” or “off resort” (from resort)\nLong stretch of beach\nGolf on the resort\nOver the Water Villas \nRondoval Villa\nSwim Up Suite \nTennis\nBritish Pub, Jerk Shack, Sushi, Teppanyaki \nDistance to Airport: More than an hour \n",
     "Images": "images/Sandals Grande St. Lucian/1 - Carousel_ResortHero_Slider/DJI_0091.jpg",
     "Beaches": "images/Sandals Grande St. Lucian/4 - Beaches/SGL Lifestyle Drone.jpg",
@@ -571,8 +571,8 @@
     "Island": "Antigua",
     "ResortDescription": "Consistently voted the “World’s Most Romantic Resort” \nLocated on Antigua’s best and most famous beach, Dickenson Bay\nSix-Star Mediterranean and Beachfront Villages\nAntigua Rainforest Zipline & Eco-Kayak Experience\nGreat Bird Island Eco & Snorkeling Experience\n6 restaurants and 7 bars\n6 pools and 6 whirlpools \nPADI-Certified SCUBA diving and equipment\nHobie Cats, paddleboards, kayaks\nFitness Center and Red Lane Spa",
     "IdealFor": "Nature Lovers",
-    "IdealFor2": ". Pool Lovers",
-    "IdealFor3": "Watersports Lovers.",
+    "IdealFor2": "Pool Lovers",
+    "IdealFor3": "Watersports Lovers",
     "Tags": "Adults Only, More Tranquil, More Intimate, Long stretch of beach, Scuba,, Tennis, Rondoval Villa, Teppanyaki, British Pub, Sushi, Distance to Airport: Less than 45 minutes ",
     "Images": "images/Sandals Grande Antigua/1 - Carousel_ResortHero_Slider/SANDALS_07_2019_BEACH_PADDLEBOARD_COUPLE_6830-370-123.jpg",
     "Beaches": "images/Sandals Grande Antigua/4 - Beaches",
