--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="controls"></div>
         <div class="tabs flex">
           <div data-id="suggested" class="tab suggested-tab active-tab">Suggested</div>
-          <div data-id="map" class="tab">Map</div>
+          <!-- <div data-id="map" class="tab">Map</div> -->
           <div data-id="beaches" class="tab">Beaches</div>
           <div data-id="pools" class="tab">Pools</div>
           <div data-id="dining" class="tab">Dining & Bars</div>
